# 3rd-view

./: .dockerignore  .gitignore  Dockerfile  README.md  add_test_event.py  auth.py  bot_service.py  config.py  cookie.txt  database.py  docker-compose.yml  example.env  logs.sh  main.py  new_courses.csv  old_parse.py  parse_all_to_pg.py  pyproject.toml  requirements.txt  schemas.py  sync_teachers_from_events.py  yandex_api.py
.github/workflows/: tests.yml
app/: auth.py  cli.py  db.py  main.py  schemas.py
app/api/: router.py
app/api/routes/: auth.py  courses.py  events.py  pages.py  recordings.py  student.py  teachers.py
app/core/: config.py
app/integrations/: ktalk_api.py  ktalk_bot.py  yandex_api.py
app/scripts/: add_test_event.py  parse_all_to_pg.py
app/services/: common.py
app/templates/: admin.html  index.html
app/workers/: bot_service.py
integrations/: ktalk_api.py  ktalk_bot.py  yandex_api.py
templates/: index.html
tests/: test_app.py  test_auth.py  test_config.py
tools/chrome-cookie-exporter/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
tools/sync_from_telegram/: README.md  analyze_unmatched.py  check_db2.py  check_db_urls.py  parse_telegram.py  push_unmatched.py  sync_records.py
